<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp">

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="20dp"

        android:layout_marginRight="20dp"

        android:background="#0064B5F6"
        android:text="@string/cancel"
        android:textColor="#818181" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_above="@+id/email"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="198dp"
        android:text="@string/find_your_encrypta_account"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/email"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continue_btn"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="20sp"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/continue_btn"
        android:layout_width="158dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="253dp"
        android:layout_marginEnd="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginStart="122dp"
        android:background="#D3D3D3"
        android:hint="@string/Continue" />




</RelativeLayout>